2010-05-07 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-it-nmu): New user command
	"C-c-cn. Help to compose "Intent to NMU" messages.
	(tinydebian-dexcode-html): New.
	(tinydebian-debian-parse-bts-search): Use 'tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-search-tag): Use `tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-bug-maintainer): Use
	`tinydebian-decode-html'.'.
	(tinydebian-debian-parse-bts-bug-reported-by): Use
	`tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-bug-title): Use `tinydebian-decode-html'.
	(tinydebian-debian-parse-bts-bug-package): Use `tinydebian-decode-html'.
	Treat src:<package> correctly.
	(tinydebian-decode-hex): Add A-F range.
	(tinydebian-bts-mail-ask-package): New.
	(tinydebian-bts-mail-type-remove): Use
	`tinydebian-bts-mail-ask-package'.
	(tinydebian-bts-mail-type-orphan): Use
	`tinydebian-bts-mail-ask-package'.
	(my-debian-bug-package-name-any): Call
	`tinydebian-bts-parse-string-current-line'.
	(tinydebian-bts-mail-ctrl-remove-package-ask-kwd): New.
	(tinydebian-:removal-keyword-list): devel New.
	(tinydebian-bts-mail-ctrl-remove-package-ask): Use
	`tinydebian-bts-mail-ctrl-remove-package-ask-kwd'.

2010-05-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-browse-url-run): Remve typo;
	variable "a".
	(tinydebian-move-point-to-free-place): New.
	(tinydebian-bts-mail-ask-bug-number): Add `save-excursion'.
	(tinydebian-command-show-rc-alert): Call
	`turn-on-tinydebian-bts-mode'.

2010-05-06 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el ()
	(tinydebian-bug-browse-url-main-interactive): Add `save-excursion'.
	(tinydebian-browse-url-basic): New.
	(tinydebian-bug-browse-url-run): Use
	`tinydebian-browse-url-basic'
	(tinydebian-browse-url-http-get): New.
	(tinydebian-decode-hex): New.
	(tinydebian-debian-parse-bts-bug-subject): New.
	(tinydebian-debian-url-bug-initialize): New.